# PDF_Processing_Rust

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  PDFIUM_LIB_PLACEMENT.md  README.md  build.sh  find_pdfium_lib.sh  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
scripts/: release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  capabilities.json  tauri.conf.json
src-tauri/capabilities/: pdf-toolkit-capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  pdf_operations.rs
src/components/: Button.tsx  DropZone.tsx  PageHeader.tsx  ResultCard.tsx  Sidebar.tsx
src/hooks/: useTauri.ts
src/pages/: CompressPdf.tsx  DeletePages.tsx  ExtractPages.tsx  Home.tsx  ImagesToPdf.tsx  MergePdf.tsx  PdfToImages.tsx  ReorderPages.tsx  RotatePdf.tsx  SplitPdf.tsx
