[package]
name = "pdf-toolkit"
version = "1.0.1"
description = "A powerful PDF processing toolkit"
authors = ["PDF Toolkit"]
edition = "2021"

[lib]
name = "pdf_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
lopdf = "0.32"
image = "0.25"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
